--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,10 +20,21 @@
         "frontalface",
         "haarcascade",
         "horz",
+        "JSIOCGAXES",
+        "JSIOCGAXMAP",
+        "JSIOCGBTNMAP",
+        "JSIOCGBUTTONS",
+        "JSIOCGNAME",
         "numhats",
+        "Tect",
         "Tello",
         "tellodrone",
         "yolov",
         "yzhang"
-    ]
+    ],
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true,
+    "[ignore]": {
+        "editor.defaultFormatter": "foxundermoon.shell-format"
+    }
 }
