--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,8 @@
 				"mhutchie.git-graph",
 				"ms-python.flake8",
 				"ms-python.black-formatter",
-				"yzhang.markdown-all-in-one"
+				"yzhang.markdown-all-in-one",
+				"hediet.vscode-drawio"
 			],
 			"settings": {
 				"python.formatting.provider": "black"
