Upgrade face tracking files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "JSIOCGNAME",
         "numhats",
         "Tect",
+        "tectinter",
         "Tello",
         "tellodrone",
         "yolov",
