Add controller adapters

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,10 +30,9 @@
 				"GitHub.copilot",
 				"GitHub.copilot-chat",
 				"mhutchie.git-graph",
-				"ms-python.flake8",
-				"ms-python.black-formatter",
 				"yzhang.markdown-all-in-one",
-				"hediet.vscode-drawio"
+				"hediet.vscode-drawio",
+				"charliermarsh.ruff"
 			],
 			"settings": {
 				"python.formatting.provider": "black"
