--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,9 +6,8 @@
         "GitHub.copilot",
         "GitHub.copilot-chat",
         "mhutchie.git-graph",
-        "ms-python.flake8",
-        "ms-python.black-formatter",
         "yzhang.markdown-all-in-one",
-        "hediet.vscode-drawio"
+        "hediet.vscode-drawio",
+        "charliermarsh.ruff"
     ]
 }
